--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Project 4</title>
 
     <!-- This is the Bootstrap CSS -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
                     
                 <nav class="navbar navbar-light">
                     <a class="navbar-brand" href="index.html">
-                      <img src="images/logo-dans-meat-yogurt.svg" alt="Dans' Meat Yogurt Company Logo">
+                      <img src="images/logo-dans-meat-yogurt.svg" alt="Meat Yogurt Company Logo" width="60px" height="auto">
                     </a>
                   </nav>
 
@@ -80,7 +80,7 @@
 
                   <div class="row">
                     <div class="col-12 col-md-4">
-                      <img src="images/headshot-dan.jpg" class="img-fluid border rounded-left border-lg border-0" alt="Daniel Walter Scott - Meat Yogurt Founder">
+                      <img src="images/headshot-dan.jpg" class="img-fluid border rounded-left border-lg border-0" alt="Meat Yogurt Founder">
                     </div>
                     <div class="col-12 col-md-8 bg-white p-5 d-flex align-items-center border border-dark rounded-right border-lg">
                       <section>
@@ -96,13 +96,13 @@
                   <div id="carouselExampleControls" class="carousel slide d-none d-md-block" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active" data-interval="500">
-                            <img src="images/yogurt-1.png" class="d-block w-100" alt="...">
+                            <img src="images/yogurt-1.png" class="d-block w-100" alt="1">
                           </div>
                           <div class="carousel-item" data-interval="500">
-                            <img src="images/yogurt-2.png" class="d-block w-100" alt="...">
+                            <img src="images/yogurt-2.png" class="d-block w-100" alt="2">
                           </div>
                           <div class="carousel-item" data-interval="500">
-                            <img src="images/yogurt-3.png" class="d-block w-100" alt="...">
+                            <img src="images/yogurt-3.png" class="d-block w-100" alt="3">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
